<resources>
    <string name="app_name">Sopt_28th_seminar_1</string>
    <string name="id">깃허브 아이디</string>
    <string name="pw">비밀번호</string>
    <string name="plz_id">ID를 입력해주세요</string>
    <string name="plz_pw">비밀번호를 입력해 주세요</string>
    <string name="login">login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>